--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+gunicorn==20.1.0
 debugpy==1.6.2
 decorator==5.1.1
 entrypoints==0.4
